--- a/style.css
+++ b/style.css
@@ -115,7 +115,9 @@ a{
     font-size: 2rem;
     font-family: roboto;
     text-shadow: -2px -2px #a9a9a9;
-}  /* My work */
+}  
+
+/* My work */
 
 #my-work{
     padding-top: 5rem;
